--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,7 @@ a:focus {
 
 .food_section .box .detail-box {
   padding: 25px;
+  height: 100%;
 }
 
 .food_section .box .detail-box h5 {
@@ -553,14 +554,6 @@ a:focus {
   margin-top: 10px;
 }
 
-.food_section .box .options {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
 
 .food_section .box .options a {
   width: 40px;
