--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ a:focus {
 }
 
 .food_section .box .img-box img {
-  max-width: 100%;
+  width: 100%;
   max-height: 190px;
   -webkit-transition: all .2s;
   transition: all .2s;
